I prevented .notes-wrapper from overflowing using max-width on .notes container

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body,
 
 .notes-search-bar {
   display: flex;
-  margin-top: 0.5rem;
 }
 
 .search-input-wrapper {
@@ -74,8 +73,9 @@ body,
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  flex: 1;
+  max-width: 100%;
+  padding: 1rem;
+  background-color: rebeccapurple;
 }
 
 .search-bar-input-settings {
@@ -90,8 +90,6 @@ body,
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: repeat(auto-fit);
   gap: 1rem;
-  overflow: auto;
-  padding: 1rem;
 
   background-color: #003cff;
 }
